--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.main {
+  background: var(--light);
+  width: 90%;
+  height: 100%;
+  min-height: 75vh;
+  margin: 2rem auto;
+  padding: 1rem;
+  box-shadow: 2px 2px 1px 4px rgba(247, 149, 209, 0.3);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 500px) {
+  .main {
+    width: 80%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 745px) {
+  .main {
+    width: 50%;
   }
 }
+
+@media (min-width: 1024px) {
+  .main {
+    width: 30%;
+  }
+} ;
